--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,10 @@
-= X0Y0
+= SimpleSurveys
 
-Skeleton project, empty but with all the stuff I need to begin with =)
-
-All you have to do for start using it is change all the X0Y0 (and x0y0) strings
-with the name of your application...
-
-=== Build Status {<img src="https://secure.travis-ci.org/francocatena/x0y0.png"/>}[http://travis-ci.org/francocatena/x0y0]
-
-=== Dependency Status {<img src="https://gemnasium.com/francocatena/x0y0.png?travis"/>}[https://gemnasium.com/francocatena/x0y0]
+Aplicación web destinada a crear encuestas para el trenvía-mendoza
 
 == (The MIT License)
 
-Copyright (c) 2012 Franco Catena
+Copyright (c) 2013 Néstor Coppi
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
