Arreglos en Otras instituciones

--- a/config/locales/application.es.yml
+++ b/config/locales/application.es.yml
@@ -28,7 +28,7 @@
         phone: 'Teléfono/Celular'
         email: 'Email'
         institution: 'Institución'
-        status_in_institution: 'Estado en la institución (Docente/Estudiante/Personal Administrativo/etc)'
+        status_in_institution: 'Estado en la institución'
       travel_line:
         travel_from: 'Desde'
         travel_to: 'Hasta =>'
@@ -90,12 +90,23 @@
       new: 'Nueva encuesta'
       personal_info: 'Información personal del encuestado'
       hi!: 'Hola!'
+      status_institution_abbr: 'Docente/Estudiante/Personal Administrativo/etc'
       travel_info: 'Información de viaje en MetroTranvía.'
       tabs_explain: 'Si viaja de lunes a viernes en el mismo horario complete la pestaña "Lunes a Viernes" y si necesita, complete la/s pesataña/s Sábado y/o Domingo.<br /> Caso contrario complete las pestañas de los días en que viaja.'
       add_travel_line: 'Agregar Otro Viaje'
       wait_time: 'Hora en la que te lo esperas tomar &nbsp; &nbsp; &nbsp; '
       save: 'Guardar Encuesta'
       worked_days: 'Lunes a Viernes'
+      another_institution: 'Otra institución'
+      institutions_list:
+        one: 'Universidad Tecnológica Nacional'
+        two: 'Facultad de Educación Elemental y Especial (FEEYE)'
+        three: 'Escuela del Magisterio'
+        four: 'ISTEEC (Instituto Superior Técnico de estudios Económicos de Cuyo)'
+        five: 'Instituto Superior Manuel Belgrano'
+        six: 'Preuniversitario Uncuyo (Esc. de comercio Martín Zapata)'
+        seven: 'Escuela Técnica Ing. Pablo Nogués'
+        other: 'Otra'
     users:
       index_title: 'Listado de usuarios'
       show_title: 'Detalle de usuario'
